# ai_word_form_fill

./: .env.example  .gitignore  README.md  config.py  logger.py  pyproject.toml  utils.py  word_fill.py  word_parser.py
doc_fill/: ai_fill_form.py  openai_client.py  parse_answer.py  prompt_generator.py  vector_store.py
examples/: schema.json  Форма ФСИ студстартап размеченная.docx  Форма ФСИ студстартап.docx
examples/tests/: input.json  view_output.json
examples/tests/budget/: answers.json  document_schema.json  raw_answers.json
examples/tests/complex/: answers.json  document_schema.json  raw_answers.json
examples/tests/dict/: answer_dict.json  raw_answer_dict.txt
examples/tests/simple/: answers.json  raw_answers.json
tests/: conftest.py  test_fill_from.py  test_utils.py  utils.py
utils/: check_correct_form.py  generate_test_data.py  jinja_fields.py  utils.py
